my/target/test/cgdb-scan/2022-04-20-221538-54255-1/failures/clang_other_error__5pYaR.ii.stderr.txt
clang -cc1 version 13.0.0 based upon LLVM 13.0.0 default target x86_64-apple-darwin20.6.0
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/Cellar/llvm/13.0.0_2/bin/../include/c++/v1
 /usr/local/Cellar/llvm/13.0.0_2/lib/clang/13.0.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk/System/Library/Frameworks (framework directory)
End of search list.
test/cc/glog2.cc:8:10: fatal error: 'glog/logging.h' file not found
#include <glog/logging.h>
         ^~~~~~~~~~~~~~~~
1 error generated.
